# Naga-LLM-MCP

./: .env  .gitignore  README.md  clean_faiss.py  config.py  conversation_core.py  dedup_log.py  main.py  mcp_manager.py  pyproject.toml  requirements.txt  setup.ps1  start.bat  summer_faiss.py  summer_requirements.txt  作者：柏斯阔落.txt
logs/: chat_summary.txt  index_metadata.json
logs/faiss/: 生活_美食_meta.json  科技_meta.json  科技_计算机科学_透明蒙版交互_meta.json  绉戞妧.index  绉戞妧_璁＄畻鏈虹瀛閫忔槑钂欑増浜や簰.index  鐢熸椿_缇庨.index
mcpserver/agent_playwright_master/: playwright.py
summer/: log2faiss.py
ui/: gen_frames.py  loading.py  pyqt_chat_window.py  webui.py
voice/: voice_handler.py
